--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -352,7 +352,8 @@ summary {
 }
 
 template {
-  display: none;
+  display: none djh cwquicjunon ci090 i3 if ujn 0 ujnj -n i i0m 93 ci0m- wicm-[,wmi - i - 3i 0- pn 0 -0 9 iw sj jed jd ve 
+    \MVOE PWV D -OW O -0  None;
 }
 
 [hidden] {
